# Multilayered_perceptron

./: .gitignore  CMakeLists.txt  README.md
data/: config.txt  my_test.csv  weights.txt  weights_20.txt
docs/: Doxyfile
docs/html/: ActivateFunction_8cpp.html  ActivateFunction_8h.html  ActivateFunction_8h.js  ActivateFunction_8h_source.html  Matrix_8cpp.html  Matrix_8cpp.js  Matrix_8h.html  Matrix_8h_source.html  Network_8cpp.html  Network_8h.html  Network_8h.js  Network_8h_source.html  Reader_8cpp.html  Reader_8cpp.js  Reader_8h.html  Reader_8h.js  Reader_8h_source.html  Utils_8cpp.html  Utils_8h.html  Utils_8h.js  Utils_8h_source.html  annotated.html  annotated_dup.js  classActivateFunction-members.html  classActivateFunction.html  classActivateFunction.js  classMatrix-members.html  classMatrix.html  classMatrix.js  classNetwork-members.html  classNetwork.html  classNetwork.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  doxygen.css  doxygen_crawl.html  files.html  functions.html  functions_func.html  (+22 more)
docs/latex/: ActivateFunction_8cpp.tex  ActivateFunction_8h.tex  ActivateFunction_8h_source.tex  Matrix_8cpp.tex  Matrix_8h.tex  Matrix_8h_source.tex  Network_8cpp.tex  Network_8h.tex  Network_8h_source.tex  Reader_8cpp.tex  Reader_8h.tex  Reader_8h_source.tex  files.tex  (+13 more)
src/: ActivateFunction.cpp  ActivateFunction.h  CMakeLists.txt  Matrix.cpp  Matrix.h  Network.cpp  Network.h  Reader.cpp  Reader.h  Utils.cpp  Utils.h  main.cpp  run
tests/: CMakeLists.txt  activatef.cpp  help.txt  matrix.cpp  network.cpp  test
(+35 files in other folders)
